# actix4-sea-orm-example

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230224_195456_users.rs
src/: env-config.rs  main.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  crud.rs  mod.rs  users.rs
src/services/: db.rs  google_auth.rs  jwt.rs  mod.rs
