[package]
name = "test-rust-actix-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite","runtime-actix-native-tls", "macros" ] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
log = "0.4.0"
env_logger = "0.10.0"
async-trait = "0.1.50"
oauth2 = "4.3.0"
uuid = "1.3.0"
reqwest = {version = "0.11.14", features = ["json"] }
jsonwebtoken = "8.2.0"
actix-cors = "0.6"
actix-web-httpauth = "0.8.0"
